quick and dirty solution for docker swarm compose with traefik

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -4,6 +4,7 @@
       - python3-mysqldb
       - python3-docker
       - python3-pip
+      - python3-jsondiff
     state: present
 
 - name: Install docker-compose python package
