New role based REIMS setup

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,7 +1,7 @@
 roles:
-  - dokku_bot.ansible_dokku
   - jnv.unattended-upgrades
   - geerlingguy.swap
+  - geerlingguy.docker
 
 collections:
   - devsec.hardening
