--- a/ansible/.config/ansible-lint.yml
+++ b/ansible/.config/ansible-lint.yml
@@ -15,3 +15,4 @@ warn_list: # or 'skip_list' to silence them completely
   - no-changed-when # Commands should not change things if nothing needs doing.
   - no-handler
   - meta-no-info
+  - var-naming[no-role-prefix]
