--- a/ansible/roles/backend/tasks/main.yml
+++ b/ansible/roles/backend/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: Load docker-compose template
-  set_fact:
+  ansible.builtin.set_fact:
     template_partial: "{{ lookup('template', 'docker-compose.yml.j2') }}"
 
 - name: Add compose to stack
-  blockinfile:
+  ansible.builtin.blockinfile:
     dest: "{{ stack_file }}"
     content: "{{ template_partial }}"
     state: present
