--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -31,11 +31,11 @@
     - grafana
 
 - name: Load docker-compose template
-  set_fact:
+  ansible.builtin.set_fact:
     template_partial: "{{ lookup('template', 'docker-compose.yml.j2') }}"
 
 - name: Add compose to stack
-  blockinfile:
+  ansible.builtin.blockinfile:
     dest: "{{ stack_file }}"
     content: "{{ template_partial }}"
     state: present
