--- a/ansible/roles/traefik/tasks/main.yml
+++ b/ansible/roles/traefik/tasks/main.yml
@@ -40,7 +40,7 @@
   notify: reload stack
 
 - name: Add network partial to docker-compose
-  blockinfile:
+  ansible.builtin.blockinfile:
     dest: "{{ stack_file }}"
     content: |
       networks:
@@ -54,11 +54,11 @@
   notify: reload stack
 
 - name: Load traefik compose template
-  set_fact:
+  ansible.builtin.set_fact:
     template_partial: "{{ lookup('template', 'proxy.yml.j2') }}"
 
 - name: Add traefik service to docker-compose
-  blockinfile:
+  ansible.builtin.blockinfile:
     dest: "{{ stack_file }}"
     content: "{{ template_partial }}"
     state: present
