--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -2,12 +2,14 @@
 - name: Install reims
   hosts: all
   roles:
+    - update_script
     - backend
     - frontend
     - monitoring
     - s3backup
   become: true
   vars:
+    reset_docker_stack: true
     db_dump: "{{ lookup('file', 'dump.sql', errors='warn') }}"
     reims2_db_password: !vault |
       $ANSIBLE_VAULT;1.1;AES256
