--- a/ansible/roles/s3backup/tasks/main.yml
+++ b/ansible/roles/s3backup/tasks/main.yml
@@ -12,23 +12,20 @@
 
 - name: Deploy backup script
   ansible.builtin.template:
-    src: backup.sh
+    src: backup.sh.j2
     dest: "{{ s3backup_install_location }}/backup.sh"
     mode: "0755"
     owner: "root"
     group: "root"
     # validate: shellcheck %s
   become: true
+  notify: Run backup
 
 - name: Creates backup schedule
   ansible.builtin.cron:
-    name: reims2 s3backup
+    name: s3backup {{ stack_name }}
     minute: "0"
     hour: "*/6,11"
     user: root
     job: "sh {{ s3backup_install_location }}/backup.sh"
-    cron_file: reims2-s3backup
-
-- name: Execute backup script
-  ansible.builtin.command: "sh {{ s3backup_install_location }}/backup.sh"
-  become: true
+    cron_file: s3backup-{{ stack_name }}
