--- a/frontend/.github/workflows/ci.yml
+++ b/frontend/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
             type=ref,event=pr
             # set latest tag for default branch
             type=raw,value=latest,enable={{is_default_branch}}
-            type=sha
+            type=sha,priority=850
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
