--- a/actions/.github/workflows/docker.yml
+++ b/actions/.github/workflows/docker.yml
@@ -37,7 +37,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@818d4b7b91585d195f67373fd9cb0332e31a7175 # v4
         with:
-          images: ${{ inputs.image_name }}
+          images: ${{ inputs.image-name }}
           tags: |
             type=semver,pattern={{version}}
             type=ref,event=branch
