--- a/backend/.github/workflows/ci.yml
+++ b/backend/.github/workflows/ci.yml
@@ -8,15 +8,11 @@ on:
     tags: ["v*.*.*"]
   pull_request:
   merge_group:
-
-env:
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  workflow_dispatch:
 
 jobs:
   ci:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
       - uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2 # v3
@@ -33,67 +29,19 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: advanced-security/maven-dependency-submission-action@d682d5d68a398c90e9b35f8c564cd8e1918d6a24 # v3
 
+
   docker:
-    # Only start publish after successful build & test on main branch
-    needs: ci
-    concurrency: docker-${{ github.ref }}
+    uses: reims2/actions/.github/workflows/docker.yml@main
+    concurrency: docker-backend-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' }}
-    runs-on: ubuntu-latest
-    outputs:  
-      json: ${{ steps.meta.outputs.json }}
-    steps:
-      - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@ecf95283f03858871ff00b787d79c419715afc34 # v2
+    secrets: inherit # pass all secrets
 
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
-      - name: Log into Docker registry
-        uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc # v2
-        with:
-          username: reims2
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@818d4b7b91585d195f67373fd9cb0332e31a7175 # v4
-        with:
-          images: ${{ env.IMAGE_NAME }}
-          tags: |
-            type=schedule
-            type=ref,event=branch
-            type=ref,event=tag
-            type=ref,event=pr
-            # set latest tag for default branch
-            type=raw,value=latest,enable={{is_default_branch}}
-            type=sha
-
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@2eb1c1961a95fc15694676618e422e8ba1d63825 # v4
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
   deploy:
-    # Only start publish after successful build & test on main branch
     needs: docker
-    runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    concurrency: deploy-reims2
-    steps:
-      - name: deploy via ssh
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: reims2.app
-          username: actions
-          key: ${{ secrets.PRIVATE_KEY }}
-          port: 22
-          script: /srv/update_script/update.sh reims2 backend ${{ fromJSON(needs.docker.outputs.json).tags[0] }}
+    uses: reims2/actions/.github/workflows/deploy.yml@main
+    concurrency: deploy-backend
+    with:
+      stack_name: reims2
+    secrets: inherit # pass all secrets
+      
