--- a/actions/.github/workflows/deploy.yml
+++ b/actions/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Get image name (temporary workaround)
         run: |
           REPO=${{ github.event.repository.name }}
-          REPO=${REPO#reims2_}
+          REPO=${REPO#reims2-}
           echo REPO: $REPO
           echo "REPO=$REPO" >> $GITHUB_ENV
       - name: deploy via ssh
