--- a/frontend/.github/workflows/ci.yml
+++ b/frontend/.github/workflows/ci.yml
@@ -13,7 +13,6 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
       - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3
@@ -27,31 +26,19 @@ jobs:
         run: yarn run lint
       - name: Run tests
         run: yarn test
-
-  build:
-    # Build in parallel for faster status output (Docker build is slow bc of bad caching)
-    runs-on: ubuntu-latest
-    needs: ci
-    steps:
-      - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
-      - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3
-        with:
-          node-version-file: ".nvmrc"
-          cache: "yarn"
-      - name: Install dependencies 📦
-        run: yarn install --immutable
       - name: Run build
         run: yarn run build
 
   docker:
-    needs: ci
     uses: reims2/actions/.github/workflows/docker.yml@main
     concurrency: docker-frontend-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' }}
     secrets: inherit # pass all secrets
 
   deploy:
-    needs: docker
+    needs: 
+      - docker
+      - ci
     if: github.ref == 'refs/heads/main'
     uses: reims2/actions/.github/workflows/deploy.yml@main
     concurrency: deploy-frontend
