--- a/backend/.github/workflows/ci.yml
+++ b/backend/.github/workflows/ci.yml
@@ -31,13 +31,16 @@ jobs:
 
 
   docker:
+    needs: ci
     uses: reims2/actions/.github/workflows/docker.yml@main
     concurrency: docker-backend-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' }}
     secrets: inherit # pass all secrets
 
   deploy:
-    needs: docker
+    needs: 
+      - docker
+      - ci # since we don"t execute tests in docker build
     if: github.ref == 'refs/heads/main'
     uses: reims2/actions/.github/workflows/deploy.yml@main
     concurrency: deploy-backend
