--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,21 +1,14 @@
-.dockerignore
+.*
 node_modules
 npm-debug.log
 Dockerfile
-.git
-.gitignore
-.npmrc
-.nuxt
-.gitpod.yml
-.gitattributes
-.editorconfig
-.github
-.vscode
 dist
-.pnp.*
-.yarn/*
+LICENSE
+README
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+!.nvmrc
+!.yarnrc.yml
