--- a/ansible/roles/docker_stack/defaults/main.yml
+++ b/ansible/roles/docker_stack/defaults/main.yml
@@ -4,3 +4,7 @@ stack_install_location: /srv/{{ stack_name }}
 reset_docker_stack: false
 
 stack_file: "{{ stack_install_location }}/docker-compose.yml"
+
+log_location: "/var/log/{{ stack_name }}"
+
+db_network: db
