--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -40,7 +40,7 @@
     content: "{{ template_partial }}"
     state: present
     validate: docker-compose -f %s config -q
-    marker: "# {mark} ANSIBLE MANAGED BLOCK for monitoring"
+    marker: "# {mark} ANSIBLE MANAGED BLOCK for {{role_name}}"
     insertafter: "services:"
   notify: reload stack
 
