--- a/ansible/roles/backend/tasks/main.yml
+++ b/ansible/roles/backend/tasks/main.yml
@@ -9,6 +9,8 @@
     content: "{{ template_partial }}"
     state: present
     validate: docker-compose -f %s config -q
-    marker: "# {mark} ANSIBLE MANAGED BLOCK for {{role_name}}"
+    marker: "# {mark} ANSIBLE MANAGED BLOCK for {{ role_name }}"
     insertafter: "services:"
-  notify: reload stack
+  notify:
+    - reload stack
+    - wait for backend
