--- a/ansible/roles/docker_stack/handlers/main.yml
+++ b/ansible/roles/docker_stack/handlers/main.yml
@@ -6,3 +6,13 @@
       - "{{ stack_file }}"
     prune: true
   become: true
+
+# Not the best location for the handlers, but this way they are always executed after reload stack
+- name: wait for frontend
+  command: "docker run --rm -i -v /var/run/docker.sock:/var/run/docker.sock sudobmitch/docker-stack-wait -n frontend {{ stack_name }}"
+- name: wait for docs
+  command: "docker run --rm -i -v /var/run/docker.sock:/var/run/docker.sock sudobmitch/docker-stack-wait -n docs {{ stack_name }}"
+- name: wait for backend
+  command: "docker run --rm -i -v /var/run/docker.sock:/var/run/docker.sock sudobmitch/docker-stack-wait -n backend {{ stack_name }}"
+- name: wait for mariadb
+  command: "docker run --rm -i -v /var/run/docker.sock:/var/run/docker.sock sudobmitch/docker-stack-wait -n mariadb {{ stack_name }}"
