--- a/ansible/roles/mariadb/defaults/main.yml
+++ b/ansible/roles/mariadb/defaults/main.yml
@@ -3,5 +3,6 @@ backend_db_location: "{{ stack_install_location }}/data/db"
 
 reims2_db_name: reims2-db
 reims2_db_user: reims2
+db_port: 3306
 
 db_dump: false
