--- a/ansible/roles/mariadb/tasks/main.yml
+++ b/ansible/roles/mariadb/tasks/main.yml
@@ -22,7 +22,10 @@
     validate: docker-compose -f %s config -q
     marker: "# {mark} ANSIBLE MANAGED BLOCK for {{role_name}}"
     insertafter: "services:"
-  notify: reload stack
+  notify:
+    - reload stack
+    - wait for mariadb
+    - restore dump
 
 - name: Copy SQL dump file onto host
   ansible.builtin.copy:
@@ -32,6 +35,3 @@
     owner: root
     group: root
     force: true
-# - name: Restore dump
-#   shell: |
-#     cat /tmp/reims-dump.sql | docker exec -i $(docker ps -q -f name={{ stack_name }}_db) /usr/bin/mariadb -p{{ reims2_db_root_password }} {{ reims2_db_name }}
