--- a/ansible/roles/monitoring/handlers/main.yml
+++ b/ansible/roles/monitoring/handlers/main.yml
@@ -1,9 +1,16 @@
-- name: reload grafana
-  ansible.builtin.service:
-    name: grafana-server
-    state: restarted
-
 - name: reload prometheus
   ansible.builtin.service:
     name: prometheus
     state: restarted
+
+- name: reload grafana
+  community.docker.docker_stack:
+    state: present
+    name: "monitoring"
+    compose:
+      - "{{ grafana_install_location }}/docker-compose.yml"
+    prune: true
+  become: true
+
+- name: wait for grafana
+  command: "docker run --rm -i -v /var/run/docker.sock:/var/run/docker.sock sudobmitch/docker-stack-wait -n grafana monitoring"
