--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -9,7 +9,7 @@
     - monitoring
   become: true
   vars:
-    reset_docker_stack: true
+    # reset_docker_stack: true
     # db_dump: "{{ lookup('file', 'dump.sql', errors='warn') }}"
     reims2_db_password: !vault |
       $ANSIBLE_VAULT;1.1;AES256
