--- a/ansible/roles/traefik/tasks/main.yml
+++ b/ansible/roles/traefik/tasks/main.yml
@@ -40,7 +40,7 @@
 
 - name: Load traefik compose template
   ansible.builtin.set_fact:
-    template_partial: "{{ lookup('template', 'proxy.yml.j2') }}"
+    template_partial: "{{ lookup('template', 'docker-compose.yml.j2') }}"
 
 - name: Add traefik service to docker-compose
   ansible.builtin.blockinfile:
