multiple parallel reims stacks possible. extract traefik conf into seperate stack

--- a/ansible/.config/ansible-lint.yml
+++ b/ansible/.config/ansible-lint.yml
@@ -16,3 +16,4 @@ warn_list: # or 'skip_list' to silence them completely
   - no-handler
   - meta-no-info
   - var-naming[no-role-prefix]
+  - yaml[new-line-at-end-of-file]
