--- a/ansible/roles/docker_stack/defaults/main.yml
+++ b/ansible/roles/docker_stack/defaults/main.yml
@@ -1,5 +1,4 @@
 ---
-stack_name: reims2
 stack_install_location: /srv/{{ stack_name }}
 reset_docker_stack: false
 
@@ -7,4 +6,6 @@ stack_file: "{{ stack_install_location }}/docker-compose.yml"
 
 log_location: "/var/log/{{ stack_name }}"
 
-db_network: db
+stack_network: "{{ stack_name }}_network"
+
+db_network: "{{ stack_name }}_db_network"
