--- a/ansible/roles/docker_stack/tasks/main.yml
+++ b/ansible/roles/docker_stack/tasks/main.yml
@@ -24,6 +24,46 @@
     state: present
   become: true
 
+- name: Create networks
+  community.docker.docker_network:
+    name: "{{ item }}"
+    driver: "overlay"
+    driver_options:
+      com.docker.network.bridge.name: "{{ item }}"
+  become: true
+  loop:
+    - "{{ db_network }}"
+    - "{{ stack_network }}"
+
+- name: Add stack network to traefik
+  ansible.builtin.blockinfile:
+    dest: "{{ traefik_stack_file }}"
+    state: present
+    validate: docker-compose -f %s config -q
+    marker: "# {mark} ANSIBLE MANAGED BLOCK for networks of compose for {{ stack_name }}"
+    insertafter: "^networks:"
+    content: |
+      # indentation helper comment
+        {{ stack_network }}:
+          external: true
+  notify:
+    - reload proxy
+    - wait for traefik
+
+- name: Add stack network to traefik
+  ansible.builtin.blockinfile:
+    dest: "{{ traefik_stack_file }}"
+    state: present
+    validate: docker-compose -f %s config -q
+    marker: "# {mark} ANSIBLE MANAGED BLOCK for networks of service for {{ stack_name }}"
+    insertafter: "\\s+networks:"
+    content: |
+      # indentation helper comment
+            {{ stack_network }}:
+  notify:
+    - reload proxy
+    - wait for traefik
+
 - name: Delete existing docker compose when reset_docker_stack is true
   ansible.builtin.file:
     path: "{{ stack_file }}"
