--- a/ansible/roles/mariadb/tasks/main.yml
+++ b/ansible/roles/mariadb/tasks/main.yml
@@ -25,13 +25,26 @@
   notify:
     - reload stack
     - wait for mariadb
-    - restore dump
 
 - name: Copy SQL dump file onto host
   ansible.builtin.copy:
     content: "{{ db_dump }}"
-    dest: /tmp/reims-dump.sql
+    dest: "{{ dump_location }}"
     mode: "0600"
     owner: root
     group: root
     force: true
+  register: dump_file
+  when: db_dump is not false
+
+- name: Flush handlers to make restoring dump possible
+  ansible.builtin.meta: flush_handlers
+  when: db_dump is not false
+
+- name: Restore dump
+  args:
+    executable: /bin/bash
+  shell: |
+    set -o pipefail
+    cat {{ dump_location }} | docker exec -i $(docker ps -q -f name={{ stack_name }}_mariadb) /usr/bin/mariadb -p{{ reims2_db_root_password }} {{ reims2_db_name }}
+  when: db_dump is not false
