--- a/ansible/roles/traefik/handlers/main.yml
+++ b/ansible/roles/traefik/handlers/main.yml
@@ -1,2 +1,11 @@
 - name: reload proxy
-  ansible.builtin.command: docker service update "{{ stack_name }}_proxy"
+  community.docker.docker_stack:
+    state: present
+    name: "proxy"
+    compose:
+      - "{{ traefik_stack_file }}"
+    prune: true
+  become: true
+
+- name: wait for traefik
+  command: "docker run --rm -i -v /var/run/docker.sock:/var/run/docker.sock sudobmitch/docker-stack-wait -n traefik proxy"
