--- a/actions/.github/workflows/docker.yml
+++ b/actions/.github/workflows/docker.yml
@@ -33,12 +33,12 @@ jobs:
         with:
           images: ${{ github.repository }}
           tags: |
-            # CHANGE in deploy.yml as well!!
             type=semver,pattern={{version}}
             type=ref,event=branch
             type=ref,event=pr,priority=250
             type=raw,value=latest,enable={{is_default_branch}}
-            type=sha,priority=850
+            # Always keep SHA for deploy script to work!
+            type=sha
 
       # Build and push Docker image with Buildx
       # https://github.com/docker/build-push-action
