--- a/backend/.github/workflows/ci.yml
+++ b/backend/.github/workflows/ci.yml
@@ -3,8 +3,7 @@ name: ci
 on:
   push:
     branches:
-      - main
-      - dev
+      - "**"
     tags: ["v*.*.*"]
   pull_request:
   merge_group:
@@ -32,18 +31,25 @@ jobs:
 
   docker:
     uses: reims2/actions/.github/workflows/docker.yml@main
-    concurrency: docker-backend-${{ github.ref }}
+    concurrency: docker-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' }}
     secrets: inherit # pass all secrets
 
   deploy:
-    needs: 
+    needs:
       - docker
       - ci # since we don"t execute tests in docker build
     if: github.ref == 'refs/heads/main'
     uses: reims2/actions/.github/workflows/deploy.yml@main
-    concurrency: deploy-backend
-    with:
-      stack_name: reims2
+    concurrency: deploy-${{ github.repository }}
+    secrets: inherit # pass all secrets
+
+  dev-deploy:
+    needs:
+      - docker
+      - ci # since we don"t execute tests in docker build
+    if: github.event_name == 'workflow_dispatch'
+    uses: reims2/actions/.github/workflows/dev-deploy.yml@main
+    concurrency: dev-deploy-${{ github.repository }}
     secrets: inherit # pass all secrets
       
