Add github registry

--- a/actions/.github/workflows/docker.yml
+++ b/actions/.github/workflows/docker.yml
@@ -25,6 +25,14 @@ jobs:
           username: reims2
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc # v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
       - name: Extract Docker metadata
